--- a/src/main/java/modeloClinicaFrame/TelaCadastroCliente.form
+++ b/src/main/java/modeloClinicaFrame/TelaCadastroCliente.form
@@ -121,7 +121,7 @@
     </Component>
     <Component class="javax.swing.JButton" name="btnCancelar">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Sair"/>
+        <Property name="text" type="java.lang.String" value="SAIR"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCancelarActionPerformed"/>
