--- a/src/main/java/modeloClinicaFrame/TelaCadastroFuncionario.form
+++ b/src/main/java/modeloClinicaFrame/TelaCadastroFuncionario.form
@@ -47,7 +47,7 @@
                       <Component id="cmbTipoFuncionario" min="-2" pref="151" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="btnSalvar" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace pref="10" max="32767" attributes="0"/>
+                      <EmptySpace pref="27" max="32767" attributes="0"/>
                       <Component id="btnCancelar" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -125,7 +125,7 @@
     </Component>
     <Component class="javax.swing.JButton" name="btnCancelar">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Sair"/>
+        <Property name="text" type="java.lang.String" value="SAIR"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCancelarActionPerformed"/>
@@ -133,7 +133,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="lblEmail1">
       <Properties>
-        <Property name="text" type="java.lang.String" value="V&#xed;nculo:"/>
+        <Property name="text" type="java.lang.String" value="Tipo:"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JComboBox" name="cmbTipoFuncionario">
